--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -633,20 +633,21 @@
           "1561259906467": {
             "type": "image",
             "settings": {
+              "image": "shopify://shop_images/hero.png",
               "alignment": "left center",
               "text_alignment": "left center",
-              "bgwrap": "#4c341f",
+              "bgwrap": "#e8f2f5",
               "show_overlay": true,
               "gradient_overlay": true,
               "bg_overlay": "#000000",
               "opacity_overlay": 0.5,
-              "slide_toptitle": "Save 50% Off",
-              "slide_toptitle_color": "#ffffff",
-              "slide_title": "Shop For <br> Women’s Fashion",
-              "slide_title_color": "#ffffff",
-              "subheading": "Discover the latest trends in women's fashion !",
-              "subheading_color": "#ffffff",
-              "button_label": "lookbook",
+              "slide_toptitle": "say yes to a nevaeer ending summer",
+              "slide_toptitle_color": "#000000",
+              "slide_title": "The di mare collection",
+              "slide_title_color": "#d73f0f",
+              "subheading": "\"Inspired By The Beauty Of The Ocean\"",
+              "subheading_color": "#000000",
+              "button_label": "Discover mare joel",
               "button_link": "shopify://collections/tools",
               "stylebtns": "btn-theme",
               "bg_button": "#ffffff",
@@ -665,24 +666,25 @@
           "1561259904381": {
             "type": "image",
             "settings": {
-              "alignment": "center center",
-              "text_alignment": "center center",
+              "image": "shopify://shop_images/hero2.png",
+              "alignment": "center bottom",
+              "text_alignment": "left center",
               "bgwrap": "#4c341f",
               "show_overlay": true,
               "gradient_overlay": true,
               "bg_overlay": "#000000",
               "opacity_overlay": 0.4,
-              "slide_toptitle": "new premium",
-              "slide_toptitle_color": "#ffffff",
-              "slide_title": "Spend €85 and <br>get 1 free",
-              "slide_title_color": "#ffffff",
-              "subheading": "The latest drops from our Weekly Selection.",
-              "subheading_color": "#fcf9f3",
-              "button_label": "shop now",
+              "slide_toptitle": "say yes to a nevaeer ending summer",
+              "slide_toptitle_color": "#000000",
+              "slide_title": "The di mare collection",
+              "slide_title_color": "#d73f0f",
+              "subheading": "\"Inspired By The Beauty Of The Ocean\"",
+              "subheading_color": "#000000",
+              "button_label": "Discover mare joel",
               "button_link": "shopify://collections/all",
-              "stylebtns": "btn-outline",
+              "stylebtns": "btn-theme",
               "bg_button": "#ffffff",
-              "color_button": "#ffffff",
+              "color_button": "#000000",
               "bg_button_hover": "#80270f",
               "color_button_hover": "#ffffff",
               "button_label_2": "50% Off",
@@ -702,18 +704,18 @@
         "settings": {
           "enable_slideshow": true,
           "setwidthout": "full",
-          "slideshow_height_adapt": "full",
+          "slideshow_height_adapt": "full-header",
           "slideshow_height_mobile": "500",
           "setwidth": "container",
           "slideshow_mobile": true,
           "autorotate": true,
           "autorotate_speed": 5,
-          "anim_slideshow": "zoom",
-          "e_arrow": true,
+          "anim_slideshow": "fade",
+          "e_arrow": false,
           "color_arrow": "#ffffff",
           "bg_arrow": "#ffffff",
           "opacity_arrow": 0.2,
-          "e_dot": true,
+          "e_dot": false,
           "slide_dot": "square",
           "color_dot_nav": "#ffffff",
           "color_dot_active": "#ffffff"
