--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -654,7 +654,7 @@
               "color_button": "#1b1c1e",
               "bg_button_hover": "#80270f",
               "color_button_hover": "#ffffff",
-              "button_label_2": "Shop now",
+              "button_label_2": "",
               "button_link_2": "shopify://collections/all",
               "stylebtns_2": "btn-underline",
               "bg_button_2": "#ffffff",
@@ -687,9 +687,9 @@
               "color_button": "#000000",
               "bg_button_hover": "#80270f",
               "color_button_hover": "#ffffff",
-              "button_label_2": "50% Off",
+              "button_label_2": "",
               "button_link_2": "shopify://collections/accessories",
-              "stylebtns_2": "btn-theme",
+              "stylebtns_2": "btn-underline",
               "bg_button_2": "#ffffff",
               "color_button_2": "#000000",
               "bg_button_hover_2": "#80270f",
@@ -708,7 +708,7 @@
           "slideshow_height_mobile": "500",
           "setwidth": "container",
           "slideshow_mobile": true,
-          "autorotate": true,
+          "autorotate": false,
           "autorotate_speed": 5,
           "anim_slideshow": "fade",
           "e_arrow": false,
@@ -2358,7 +2358,7 @@
       "pnewsletter": {
         "type": "pnewsletter",
         "settings": {
-          "pnewletter_enable": true,
+          "pnewletter_enable": false,
           "pnew_style": "pnew_style-4",
           "pnew-width": 560,
           "pnew-height": 600,
