--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -36,11 +36,15 @@
     "font_family_google": "",
     "font_family2": "inter_n4",
     "font_family2_google": "",
-    "slide_font_size": 40,
+    "slide_font_size": 72,
+    "slide_font_size_mobile": 32,
     "slide_font_weight": "400",
     "slide_font_transform": "uppercase",
     "slide_font_lineheight": "1.5",
-    "slide_font_spacing": "0.2",
+    "slide_font_spacing": "0",
+    "fz2_font_size": 28,
+    "fz2_font_size_tablet": 18,
+    "fz2_font_size_mobile": 14,
     "h1_font_size": 38,
     "h1_font_weight": "400",
     "h1_font_transform": "uppercase",
