--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -14,7 +14,7 @@
     "slideshow": "slideshow-1",
     "sectionheading": "heading-1",
     "loading": "border",
-    "favicon": "shopify://shop_images/ico.png",
+    "favicon": "shopify://shop_images/a230cb63801ff412ad90c3725db948ac4cbb5562.png",
     "meta_description": "Pose Shopify Template with multiple layouts and styles allows you to create different structures and satisfies any specific requirements for different kinds of business.",
     "color_primary": "#80270f",
     "color_secondary": "#80270f",
@@ -33,14 +33,15 @@
     "font_family_custom": false,
     "font_family_custom_body": false,
     "font_family": "inter_n4",
-    "font_family_google": "",
+    "font_family_google": "Poppins",
     "font_family2": "inter_n4",
     "font_family2_google": "",
-    "slide_font_size": 40,
+    "slide_font_size": 72,
+    "slide_font_size_mobile": 32,
     "slide_font_weight": "400",
     "slide_font_transform": "uppercase",
     "slide_font_lineheight": "1.5",
-    "slide_font_spacing": "0.2",
+    "slide_font_spacing": "0",
     "h1_font_size": 38,
     "h1_font_weight": "400",
     "h1_font_transform": "uppercase",
@@ -96,15 +97,15 @@
     "align_bread": "left",
     "layout_bread": "container",
     "share_image": "",
-    "social_facebook_link": "https://www.facebook.com/shopify",
-    "social_twitter_link": "https://twitter.com/shopify",
-    "social_pinterest_link": "https://www.pinterest.com/shopify",
-    "social_instagram_link": "https://instagram.com/shopify",
+    "social_facebook_link": "https://www.facebook.com/marejouelswimwear",
+    "social_twitter_link": "",
+    "social_pinterest_link": "https://www.pinterest.com/marejouelswimwear",
+    "social_instagram_link": "https://instagram.com/marejouelswimwear",
     "social_tumblr_link": "",
     "social_snapchat_link": "",
-    "social_youtube_link": "https://www.youtube.com/user/shopify",
+    "social_youtube_link": "",
     "social_vimeo_link": "",
-    "social_tiktok_link": "#",
+    "social_tiktok_link": "https://www.tiktok.com/@marejouelswimwear",
     "share_facebook": true,
     "share_twitter": true,
     "share_pinterest": true,
@@ -130,7 +131,7 @@
     "e_swatch": true,
     "swatch_color": true,
     "swatch_color_circle": false,
-    "enable_countdown_card": true,
+    "enable_countdown_card": false,
     "menu_label_size": 10,
     "txtuppercase": true,
     "e_rotatelabel": false,
@@ -147,9 +148,11 @@
     "label_text1": "Hot",
     "label_bg1": "#ffffff",
     "label_cl1": "#ff7143",
+    "label_e2": false,
     "label_text2": "New",
     "label_bg2": "#ffffff",
     "label_cl2": "#224b0c",
+    "label_e3": false,
     "label_text3": "Best seller",
     "label_bg3": "#ffffff",
     "label_cl3": "#dfa069",
@@ -192,6 +195,9 @@
     "terms_link": "#",
     "safe_checkout_pcart": "",
     "safe_checkout_cart": "",
+    "fz2_font_size": 28,
+    "fz2_font_size_tablet": 18,
+    "fz2_font_size_mobile": 14,
     "checkout_header_image": "",
     "checkout_logo_image": "",
     "checkout_logo_position": "left",
@@ -651,7 +657,7 @@
               "subheading_color": "#000000",
               "button_label": "Discover mare joel",
               "button_link": "shopify://collections/tools",
-              "stylebtns": "btn-theme",
+              "stylebtns": "btn-outline",
               "bg_button": "#ffffff",
               "color_button": "#1b1c1e",
               "bg_button_hover": "#80270f",
@@ -676,7 +682,7 @@
               "gradient_overlay": true,
               "bg_overlay": "#000000",
               "opacity_overlay": 0.4,
-              "slide_toptitle": "say yes to a nevaeer ending summer",
+              "slide_toptitle": "say yes to a never ending summer",
               "slide_toptitle_color": "#000000",
               "slide_title": "The di mare collection",
               "slide_title_color": "#d73f0f",
@@ -684,14 +690,14 @@
               "subheading_color": "#000000",
               "button_label": "Discover mare joel",
               "button_link": "shopify://collections/all",
-              "stylebtns": "btn-theme",
+              "stylebtns": "btn-outline",
               "bg_button": "#ffffff",
               "color_button": "#000000",
               "bg_button_hover": "#80270f",
               "color_button_hover": "#ffffff",
               "button_label_2": "",
               "button_link_2": "shopify://collections/accessories",
-              "stylebtns_2": "btn-underline",
+              "stylebtns_2": "btn-outline",
               "bg_button_2": "#ffffff",
               "color_button_2": "#000000",
               "bg_button_hover_2": "#80270f",
@@ -710,7 +716,7 @@
           "slideshow_height_mobile": "500",
           "setwidth": "container",
           "slideshow_mobile": true,
-          "autorotate": false,
+          "autorotate": true,
           "autorotate_speed": 5,
           "anim_slideshow": "fade",
           "e_arrow": false,
@@ -1262,9 +1268,12 @@
           "show_overlay": false,
           "autorotate": false,
           "autorotate_speed": 5,
+          "e_arrow": false,
           "color_arrow": "#262613",
           "bg_arrow": "#ffffff",
           "opacity_arrow": 1,
+          "e_dot": true,
+          "slide_dot": "square",
           "color_dot_nav": "#262613",
           "color_dot_active": "#d48114"
         }
@@ -1275,6 +1284,7 @@
           "1590405549465": {
             "type": "image",
             "settings": {
+              "image": "shopify://shop_images/social_card_2.png",
               "width_image": 600,
               "alignment": "center center",
               "text_alignment": "left center",
@@ -1308,6 +1318,7 @@
           "1590404620420": {
             "type": "image",
             "settings": {
+              "image": "shopify://shop_images/social_card_4.png",
               "width_image": 600,
               "alignment": "center center",
               "text_alignment": "left center",
@@ -1530,12 +1541,7 @@
         "type": "video",
         "settings": {
           "animation": "fade-up",
-          "setwidth": "container",
-          "video_url": "https://vimeo.com/262234800",
-          "cover_image": "shopify://shop_images/s3.jpg",
-          "show_overlay": true,
-          "overlay_color": "#000000",
-          "overlay_opacity": 0
+          "setwidth": "container"
         }
       },
       "brand-carousel": {
